# lets-talk

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix  rust-toolchain.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: app-to-ft.yml  lets-talk-to-ft.yml  lets-talk-to-www.yml  lets-talk-ui-to-ft.yml  release-backend.yml  system-to-ft.yml  template-to-ft.yml  ui-to-ft.yml  upload_app.sh  upload_template.sh  www-to-ft.yml
app/: .is-local  FASTN.ftd  badge.ftd  dashboard.ftd  index.ftd  new.ftd
app/.packages/lets-talk-system.fifthtry.site/: FASTN.ftd  (+2 more)
app/actions/: create-meeting.ftd
app/js/: README.md  index.mjs  package-lock.json  rollup.config.mjs
app/storybook/: dashboard.ftd  index.ftd
backend/: Cargo.toml
backend/src/: auth.rs  create_meeting.rs  dyte.rs  lib.rs  schedule_meeting.rs  session.rs  token.rs  uuid.rs
lets-talk-template.fifthtry.site/: FASTN.ftd  ds.ftd  lets-talk.ftd  package-lock.json
lets-talk-template.fifthtry.site/.packages/: lets-talk.fifthtry.site
lets-talk.fifthtry-community.com/: FASTN.ftd  index.ftd
lets-talk.fifthtry.site/: .is-local  FASTN.ftd  config.ftd  dashboard.ftd  ds.ftd  dummy.ftd  index.ftd  main.ftd  meeting.ftd  new.ftd  package-lock.json  state.ftd  utils.ftd
lets-talk.fifthtry.site/actions/: create-meeting.ftd  schedule-meeting.ftd
lets-talk.fifthtry.site/assets/: calc.js
lets-talk.fifthtry.site/js/: calender.js  functions.js  index.mjs  package.json  test.html
lets-talk.fifthtry.site/storybook/: 1-1-meeting.ftd  3-meeting.ftd  6-meeting.ftd  9-meeting.ftd  dashboard.ftd  dummy-state.ftd  index.ftd  meeting-ui.ftd
lets-talk.fifthtry.site/ui/: 1-1-meeting-page.ftd  dashboard.ftd  dyte-meeting-page.ftd  meeting-page.ftd
scripts/: auto.sh  build-wasm.sh  optimise-wasm.sh  publish-app.sh
talk/src/: auth.rs  dyte.rs  lib.rs
template/: FASTN.ftd  app.ftd  build.js  configure.ftd  ds.ftd  fastn.sqlite  forgot-password-success.ftd  forgot-password.ftd  index.ftd  meeting.ftd  set-password.ftd  signin.ftd  signup.ftd
template-final/: FASTN.ftd  app.ftd  ds.ftd  index.ftd  lets-talk.ftd  talk-ui.ftd
template-final/data/: urls.ftd
template/actions/: create-account.ftd  create-meeting.ftd  forgot-password.ftd  set-password.ftd  signin.ftd
template/data/: sessions.ftd  urls.ftd  user.ftd
www/: FASTN.ftd  index.ftd  main.ftd  new.ftd
(+18 files in other folders)
