[workspace]
members = ["backend"]
resolver = "2"


[profile.release]
lto = true
opt-level = 's'


[workspace.package]
authors = [
    "Amit Upadhyay <upadhyay@gmail.com>",
    "Siddhant Kumar <siddhantk232@gmail.com>",
]
edition = "2021"
description = "Wasm backend of let's talk"
license = "MIT"
repository = "https://github.com/fastn-community/lets-talk"
homepage = "https://github.com/fastn-community/lets-talk"


[workspace.dependencies]
ft-sdk = { version = "0.1.17", features = ["field-extractors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"], default-features = false }
http = "1.0"
bytes = "1.0"
diesel = { version = "2", default-features = false, features = ["chrono"] }
regex = "1"
rand = "0.5"
base64 = "0.22"
cookie = { version = "0.18", features = ["percent-encode"] }
